[gd_scene load_steps=3 format=3 uid="uid://biaqmyb0rugkh"]

[ext_resource type="Script" path="res://Game9/UI/GameHud/game_hud.gd" id="1_elmpm"]
[ext_resource type="FontFile" uid="uid://0li4b5b8np1l" path="res://Game9/UI/SuperBrigade-xRoW0.otf" id="1_mgrk8"]

[node name="GameHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_elmpm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LapContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LapLabel1" type="Label" parent="VBoxContainer/LapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.621792, 0.180183, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "Lap: "

[node name="LapNumber" type="Label" parent="VBoxContainer/LapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "1"

[node name="LapLabel2" type="Label" parent="VBoxContainer/LapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "/"

[node name="LapTotal" type="Label" parent="VBoxContainer/LapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "5"

[node name="SpeedContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/SpeedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 24
text = "Km/h: "

[node name="SpeedCounter" type="Label" parent="VBoxContainer/SpeedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 24
text = "0"

[node name="PositionContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -245.0
offset_bottom = 38.0
grow_horizontal = 0

[node name="PositionLabel" type="Label" parent="PositionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "Pos: "

[node name="PositionNumber" type="Label" parent="PositionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "1"

[node name="PositionLabel2" type="Label" parent="PositionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "/"

[node name="PositionTotal" type="Label" parent="PositionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "4"

[node name="FinalLap" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -180.0
offset_right = 175.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 36
text = "Final Lap!"
horizontal_alignment = 1

[node name="3" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 150
text = "3"
horizontal_alignment = 1

[node name="2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 150
text = "2"
horizontal_alignment = 1

[node name="1" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 150
text = "1"
horizontal_alignment = 1

[node name="GO" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 150
text = "GO"
horizontal_alignment = 1

[node name="SpaceExit" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -100.0
offset_right = 288.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mgrk8")
theme_override_font_sizes/font_size = 24
text = "Press SPACE to return to menu"
horizontal_alignment = 1
